--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "socket.io-client": "^4.6.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
     "vuetify": "^3.3.3"
