--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "pinia": "^2.1.4",
     "socket.io-client": "^4.6.2",
     "uuid": "^9.0.0",
     "vue": "^3.3.4",
